# baobzi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  make_source.sh  setup.py
.github/workflows/: wheels.yml
ci/: Jenkinsfile
examples/: baobzi_timing.c  baobzi_timing.cpp  fortran_example.f90  tree_test.cpp
examples/C/: baobzi_timing.c  demo2d.c
examples/c++/: baobzi_timing.cpp
examples/fortran/: fortran_example.f90
examples/julia/: simple2d.jl
examples/matlab/: hankelimag.m  hankelreal.m  hankeltest.m  simple2d.m  testfun.m
examples/python/: simple2d.py
include/: baobzi.h  baobzi.hpp  baobzi_header.h  baobzi_template.hpp  baobzi_types.h
include/baobzi/: baobzi_cases.h  baobzi_cases_restore.h  baobzi_decls.h  header.h  macros.h
julia/examples/: simple2d.jl
julia/src/: baobzi.jl
matlab/src/: baobzi.m  baobzi_mex.cpp
python/examples/: simple2d.py
python/src/: baobzi.py
src/: baobzi.cpp  baobzi.f90  baobzi_0.cpp  baobzi_1.cpp  baobzi_1d_10.cpp  baobzi_1d_10_0.cpp  baobzi_1d_10_1.cpp  baobzi_1d_10_2.cpp  baobzi_1d_10_3.cpp  baobzi_1d_12.cpp  baobzi_1d_12_0.cpp  baobzi_1d_12_1.cpp  baobzi_1d_12_2.cpp  baobzi_1d_12_3.cpp  baobzi_1d_14.cpp  baobzi_1d_14_0.cpp  baobzi_1d_14_1.cpp  baobzi_1d_14_2.cpp  baobzi_1d_14_3.cpp  baobzi_1d_16.cpp  baobzi_1d_16_0.cpp  baobzi_1d_16_1.cpp  baobzi_1d_16_2.cpp  baobzi_1d_16_3.cpp  baobzi_1d_6.cpp  baobzi_1d_6_0.cpp  baobzi_1d_6_1.cpp  baobzi_1d_6_2.cpp  baobzi_1d_6_3.cpp  baobzi_1d_8.cpp  baobzi_1d_8_0.cpp  baobzi_1d_8_1.cpp  baobzi_1d_8_2.cpp  baobzi_1d_8_3.cpp  baobzi_2.cpp  baobzi_2d_10.cpp  baobzi_2d_10_0.cpp  baobzi_2d_10_1.cpp  baobzi_2d_10_2.cpp  baobzi_2d_10_3.cpp  (+80 more)
src/julia/: baobzi.jl
src/julia/Baobzi/: Project.toml
src/julia/Baobzi/src/: Baobzi.jl
src/matlab/: baobzi.m  baobzi_mex.cpp  class_handle.hpp
src/python/: __init__.py  baobzi.py
tests/: test_c.cpp  test_template.cpp
